@@ -7,7 +7,8 @@ if @lead.valid?
   if called_from_index_page?
     page << refresh_sidebar(:index, :filters)
     page[:paginate].replace_html render(:partial => "common/paginate")
-  elsif @campaign # Lead created on Campaign landing page: refresh Campaign summary.
+  elsif called_from_landing_page?("campaigns")
+    @campaign.reload
     page << refresh_sidebar_for(:campaigns, :show, :summary)
   end
   page.call "crm.flick", :empty, :remove
