@@ -10,6 +10,8 @@ if @lead.status == "converted"
     page[id].visual_effect :highlight, :duration => 1.0
     if called_from_index_page?
       page << refresh_sidebar(:index, :filters)
+    elsif called_from_landing_page?("campaigns")
+      page << refresh_sidebar_for(:campaigns, :show, :summary)
     else
       page[:recently].replace :partial => "common/recently"
     end
