@@ -76,12 +76,16 @@ describe "/leads/promote.js.rjs" do
         response.should include_text(%Q/$("lead_#{@lead.id}").visualEffect("highlight"/)
       end
 
-      it "should update recently viewed items" do
+      it "should update campaign sidebar" do
+        assigns[:campaign] = campaign = Factory(:campaign)
         render "leads/promote.js.rjs"
-        response.should have_rjs("recently") do |rjs|
-          with_tag("div[class=caption]")
+
+        response.should have_rjs("sidebar") do |rjs|
+          with_tag("div[class=panel][id=summary]")
+          with_tag("div[class=panel][id=recently]")
         end
       end
+
     end
   end # no errors
   
