@@ -68,9 +68,8 @@ describe "/leads/update.js.rjs" do
         response.should include_text(%Q/$("lead_#{@lead.id}").visualEffect("highlight"/)
       end
 
-      it "should update related campaign sidebar from campaign landing page" do
+      it "should update campaign sidebar" do
         assigns[:campaign] = campaign = Factory(:campaign)
-        request.env["HTTP_REFERER"] = "http://localhost/campaigns/#{campaign.id}"
         render "leads/create.js.rjs"
 
         response.should have_rjs("sidebar") do |rjs|
@@ -78,14 +77,8 @@ describe "/leads/update.js.rjs" do
           with_tag("div[class=panel][id=recently]")
         end
       end
-
-      it "should update recently viewed items" do
-        render "leads/update.js.rjs"
-        response.should have_rjs("recently") do |rjs|
-          with_tag("div[class=caption]")
-        end
-      end
     end
+
   end # no errors
 
   describe "validation errors :" do
