@@ -8,6 +8,7 @@ Fri, Nov 6, 2009
 ---------------------------------------------------------------------
 - Adjust total campaign revenue when related opportunity is won (LH #121).
 - Refresh campaign sidebar when updating related opportunity (LH #121).
+- Update campaign summary when rejecting or converting related lead (LH #121).
 
 Thu, Nov 5, 2009
 ---------------------------------------------------------------------
